[package]
name = "fluree-db-consensus"
description = "Consensus traits and implementations for Fluree DB transaction submission"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fluree-db-api = { path = "../fluree-db-api" }
fluree-db-transact = { path = "../fluree-db-transact" }
fluree-db-ledger = { path = "../fluree-db-ledger" }

async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
moka = { workspace = true, features = ["future"] }
tracing = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }

[lints]
workspace = true
